--- a/index.html
+++ b/index.html
@@ -412,6 +412,29 @@
 					<h5 style="font-size: 10pt">You must be registered for HackBI first.</h5>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-xs-12 col-md-6 header" style="margin-top: -15px">
+					<h1 id="faq-text" style="text-shadow: -4px 6px 0px black"><b>CyberHunt</b></h1>
+					<h2>Win prizes for solving our cybersecurity challenges!</h2>
+					<div class="" style="margin: 0 0 0 0; padding: 0; text-align: center; position: relative;">
+						<span class="cyber1">Cryptography</span><br><span class="cyber1">Ubuntu</span><br><span class="cyber1">Windows</span><br>
+					</div>
+					<div class="" style="margin: 0; padding: 0; text-align: center; position: relative;">
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-6 header" style="margin-top: -15px">
+					<h1 id="faq-text" style="text-shadow: -4px 6px 0px black"><b>Coding Competition</b></h1>
+					<h2>Solve or answer our programming-related questions to win prizes!</h2>
+					<div class="" style="margin: 0 0 0 0; padding: 0; text-align: center; position: relative;">
+						<span class="cyber1">Big-O</span><br><span class="cyber1">Python</span><br><span class="cyber1">Pseudocode</span><br>
+					</div>
+					<div class="" style="margin: 0; padding: 0; text-align: center; position: relative;">
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				
+			</div>
 		</div>
 	</div>
 
@@ -428,11 +451,11 @@
 					<form id="contactform" style="text-align: left;">
 						<div class="form-group">
 							<label>Name</label>
-							<input id="namef" class="form-control is-valid" placeholder="Name">
+							<input id="namei" class="form-control is-valid" placeholder="Name">
 						</div>
 						<div class="form-group">
 							<label>Email Address</label>
-							<input id="emailf" class="form-control" placeholder="Email">
+							<input id="emaili" class="form-control" placeholder="Email">
 						</div>
 					</form>
 					<button id="btnsubmit" type="submit" onclick="javascript:notifSubmit(); return false;">Submit</button>
