--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
       <a class="social" href="https://pbs.twimg.com/media/DYX2hoVWsAIMxvN.jpg" target="_blank">
         <img data-src="img/snapchat.svg" title="Snapchat">
       </a>
-      <a class="social" href="https://youtu.be/p_xg-GK7heY" target="_blank">
+      <a class="social" href="https://youtu.be/EZ1UAPTvYns" target="_blank">
         <img data-src="img/youtube.svg" title="YouTube">
       </a>
     </div>
