--- a/register.html
+++ b/register.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Register - HackBI</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!--
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81281305-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-81281305-2');
+    </script>
+    -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Register - HackBI</title>
     <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <meta name="keywords" content="register, registration, sign up, HackBI, Hack BI, Hack BI IV, Hack BI 4, hackathon, Bishop Ireton">
+    <meta name="description" content="Register for HackBI! Open to all students in grades 8-12. Volunteers are also needed.">
+    <meta name="theme-color" content="#FC4D45">
+    <meta property="og:title" content="HackBI Team">
+    <meta property="og:description" content="Register for HackBI! Open to all students in grades 8-12. Volunteers are also needed.">
+    <meta property="og:site_name" content="HackBI">
+    <meta property="og:image" content="img/team.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@hackbiofficial">
+    <meta name="twitter:title" content="HackBI Team">
+    <meta name="twitter:description" content="Register for HackBI! Open to all students in grades 8-12. Volunteers are also needed.">
+    <meta name="twitter:image" content="img/team.jpg">
 </head>
 <style>
     body {
-        background-color: white;
-        /* min-width: 470px; */
+        background-color: #fdfeff;
     }
 
     .jumbotron {
@@ -23,7 +45,7 @@
         background-position: center;
         background-position-y: 47%;
         background-size: cover;
-        height: 40vh !important;
+        height: 20rem;
         margin: 0;
         border-radius: 0;
     }
@@ -39,6 +61,7 @@
 
     .card {
         width: 20rem;
+        max-width: 20rem;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.13), 0 6px 20px 0 rgba(0, 0, 0, 0.12);
         background: #fff;
         border-radius: 10px;
@@ -186,8 +209,8 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-transparent" id="navbar-1">
         <div class="container" style="max-width: 1200px;">
-          <a class="navbar-brand" href="#" title="HackBI Home">
-            <svg style="height: 33px; margin-top: 5px" viewBox="0 0 450.56 104.82" height="33" xmlns="http://www.w3.org/2000/svg">
+          <a class="navbar-brand" href="#" title="Scroll to top">
+            <svg id="brand" style="margin-top: 5px;" viewBox="0 0 450.56 104.82" height="33" xmlns="http://www.w3.org/2000/svg">
               <title>HackBI</title>
               <g id="Icon">
                 <path d="M93.67,83.67A10.47,10.47,0,0,1,83.21,94.15H17A10.48,10.48,0,0,1,6.48,83.67V17.31A10.48,10.48,0,0,1,17,6.83H83.21A10.47,10.47,0,0,1,93.67,17.31Z" transform="translate(-5.23 -5.58)" style="fill:#fff2a6"></path>
@@ -215,25 +238,30 @@
               </g>
             </svg>
           </a>
+          <button class="hamburger hamburger--squeeze navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+          </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="../">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="">Register<span class="sr-only">(current page)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#faq">FAQ</a>
+                <a class="nav-link" href="../#faq">FAQ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact</a>
+                <a class="nav-link" href="../#contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="team.html">Team</a>
+                <a class="nav-link" href="../team">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Last Year</a>
+                <a class="nav-link" href="https://hackbi-iii.devpost.com/">Last Year</a>
               </li>
             </ul>
           </div>
