--- a/team.html
+++ b/team.html
@@ -167,18 +167,18 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../">Home</a>
+            <a class="nav-link" href="./">Home</a>
           </li>
           <!--
           <li class="nav-item">
-            <a class="nav-link" href="../register">Register</a>
+            <a class="nav-link" href="./register">Register</a>
           </li>
           -->
           <li class="nav-item">
-            <a class="nav-link" href="../#faq">FAQ</a>
+            <a class="nav-link" href="./#faq">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../#contact">Contact</a>
+            <a class="nav-link" href="./#contact">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="">Team<span class="sr-only">(current page)</span></a>
