--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <div class="col-12 col-lg-6 panel hideme">
           <div class="row row-panel">
             <div class="col-8">
-                <img src="temp/learning (2).jpeg" class="round-img img-sm-left img-md-left" style="width: 100%; ">
+                <img src="img/learning.jpeg" class="round-img img-sm-left img-md-left" style="width: 100%; ">
             </div>
             <div class="col-4">
                 <h4>Learn.</h4>
@@ -344,14 +344,14 @@
                 <h4>Collaborate.</h4>
             </div>
             <div class="col-8">
-                <img src="temp/teamwork.jpeg" class="round-img img-sm-right img-md-left" style="width: 100%;">
+                <img src="img/teamwork.jpeg" class="round-img img-sm-right img-md-left" style="width: 100%;">
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-6 panel hideme">
           <div class="row row-panel">
             <div class="col-8 order-lg-2">
-                <img src="temp/presentation.jpeg" class="round-img img-sm-left img-md-right" style="width: 100%;">
+                <img src="img/presentation.jpeg" class="round-img img-sm-left img-md-right" style="width: 100%;">
             </div>
             <div class="col-4">
                 <h4>Pitch.</h4>
@@ -364,7 +364,7 @@
                     <h4>Celebrate.</h4>
                 </div>
                 <div class="col-8">
-                    <img src="temp/awards.jpeg" class="round-img img-sm-right img-md-right" style="width: 100%;">
+                    <img src="img/awards.jpeg" class="round-img img-sm-right img-md-right" style="width: 100%;">
                 </div>
             </div>
         </div>
